managing focus completed

--- a/lesson2-focus/03-managing-focus/index.html
+++ b/lesson2-focus/03-managing-focus/index.html
@@ -36,9 +36,9 @@
         <h1 class="title">The Wonders of Vegemite</h1>
       </div>
       <nav id="menu" class="mdl-layout__tab-bar mdl-color--primary-dark">
-        <a href="what-is-vegemite" data-page="what-is-vegemite" class="mdl-layout__tab is-active">What is Vegemite?</a>
-        <a href="recipes" data-page="recipes" class="mdl-layout__tab">Recipes</a>
-        <a href="ingredients" data-page="ingredients" class="mdl-layout__tab">Ingredients</a>
+        <h2 tabindex= -1><a href="what-is-vegemite" data-page="what-is-vegemite" class="mdl-layout__tab is-active">What is Vegemite?</a></h2>
+        <h2 tabindex= -1><a href="recipes" data-page="recipes" class="mdl-layout__tab">Recipes</a></h2>
+        <h2 tabindex= -1><a href="ingredients" data-page="ingredients" class="mdl-layout__tab">Ingredients</a></h2>
       </nav>
     </header>
 
